# tecio

./: .gitignore  LICENSE  README  README.md  makefile  pltio.py  pyproject.toml  pyproject_toml  setup.py  setup_guide.md  szlfile.py  szlfile_unit_test.py  szlfile_write.py  szlfile_write_unit_test.py  szlio.py  szlio_write.py  tecdata.py  tecdata_examples.py  tecutils.py
.github/workflows/: python-package.yml
tecio/: __init__.py  libtecio.py  pltio.py  szlfile.py  szlfile_write.py  szlio.py  szlio_write.py  tecdata.py  tecutils.py
tests/: szlfile_unit_test.py  szlfile_write_unit_test.py  tecdata_unit_test.py
