[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tecio"
version = "0.1.0"
description = "Scientific data processing tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
